2002-12-12 10:16  huysmans

	* ChangeLog, configure, configure.ac, panel/Makefile.am,
	panel/Makefile.in, panel/builtins.c, panel/callbacks.c,
	panel/central.c, panel/central.h, panel/controls.c,
	panel/controls.h, panel/controls_dialog.c, panel/dialogs.c,
	panel/dialogs.h, panel/global.h, panel/groups.c, panel/groups.h,
	panel/handle.c, panel/icons.c, panel/icons.h, panel/item.c,
	panel/item_dialog.c, panel/main.c, panel/main.h, panel/panel.c,
	panel/panel.h, panel/popup.c, panel/popup.h, panel/settings.c,
	panel/settings.h, panel/side.c, panel/side.h, panel/wmhints.c,
	panel/wmhints.h, panel/xfce.c, panel/xfce.h, panel/xfce_support.c,
	panel/xfce_support.h, plugins/Makefile.am, plugins/Makefile.in,
	plugins/switcher/Makefile.am, plugins/switcher/Makefile.in,
	plugins/switcher/switcher.c: Huge update. Highlights: switcher
	plugin instead of central panel code. Side panels don't exist
	anymore; there is one list of panel groups. xfce.c split up into
	main and panel modules. New general header file xfce.h that
	includes all exported headers. New fixes and probably new bugs

2002-12-03 15:24  huysmans

	* themes/: Crystal/Makefile.am, Crystal/Makefile.in,
	Crystal/newmail.png, Crystal/nomail.png, Crystal/oldmail.png,
	Noia/Makefile.am, Noia/Makefile.in, Noia/newmail.png,
	Noia/nomail.png, Noia/oldmail.png: Add mail icons to Crystal and
	Noia themes. Thanks (again) to Jeroen Vloothuis

2002-11-28 21:28  madkiss

	* debian/: changelog, control, rules, xfce4.install,
	maintain/gdm-Xfce, maintain/xfce4_setup, maintain/xfce4_setup.1: 
	Update to debian/-subdir included in xfce4_20021127-1.

2002-11-27 22:30  huysmans

	* ChangeLog, panel/icons.c, panel/xfce.c,
	plugins/mailcheck/mailcheck.c: Fix a bug in icon handling. Thanks
	to Korbinus

2002-11-26 15:04  huysmans

	* themes/XFce/: Makefile.am, Makefile.in: Also update makefiles

2002-11-26 15:01  huysmans

	* themes/XFce/: mail.xpm, newmail.xpm: Fix naming of new mail icon

2002-11-26 14:06  huysmans
