@@ -1,3 +1,15 @@
+2002-12-12 16:28  huysmans
+
+	* panel/: main.c, panel.c, panel.h: Improve SIGHUP handling
+
+2002-12-12 12:09  huysmans
+
+	* panel/: panel.c, xfce_support.c: Improve window layer handling
+
+2002-12-12 10:23  huysmans
+
+	* ChangeLog, example.xfce4rc.in: Update default rc file
+
 2002-12-12 10:16  huysmans
 
 	* ChangeLog, configure, configure.ac, panel/Makefile.am,
